# ray-tracing-acceleration

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
RayTracingCPU/: AABB.cpp  AABB.h  CMakeLists.txt  Entity.cpp  Entity.h  Material.cpp  Material.h  OctTree.h  Ray.h  RayTracingCPU.cpp  RayTracingCPU.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
